--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,14 +1,18 @@
 .footer {
-  width: 1280px;
-  height: 3504px;
-  top: 5627px;
+  width: 100%;
+  /* height: 3504px; */
+  /* here margin added; */
+  margin: auto;
+  position: relative;
+  /* top: 5627px; */
   gap: 0px;
-  opacity: 0px;  
+  opacity: 0px;
+  border: 2px solid rgb(243, 244, 240);
   }
   .footer img{
     width: 1280px;
-height: 3504px;
-top: 5627px;
+/* height: 3504px; */
+/* top: 5627px; */
 gap: 0px;
 opacity: 0px;
 background: linear-gradient(180deg, rgba(255, 238, 204, 0) 2.59%, rgba(255, 238, 204, 0.6) 38.16%);
@@ -19,10 +23,99 @@ background: linear-gradient(180deg, rgba(255, 238, 204, 0) 2.59%, rgba(255, 238,
     padding: 20px;
     margin: 20px 0;
   }
-  
+
   .life-goals-section {
     background-color: #e5f7ff;
     padding: 20px;
     margin: 20px 0;
   }
-  
+  .demo1{
+    height: 250px;
+    /* border: 1px solid red; */
+    position: relative;
+    top:180px;
+    padding-left: 100px;
+  }
+  .demo2{
+    /* border: 1px solid green; */
+    background: url("../assests/images/Vector\ 2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .banksafelogo{
+    /* border: 2px solid red; */
+    display: block;
+    background: url("../assests/images/Bank Safe.png");
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    background-size: cover;
+    top:150px;
+    left:1080px;
+    padding: 0;
+    margin: 0;
+
+  }
+  .about-money-h1{
+    text-align: left;
+  }
+  .about-money-p{
+    text-align: left;
+  }
+
+  .p-plus{
+    width: 10px;
+  }
+  .brand-safe{
+    display: block;
+    background: url("../assests/images/Frame\ 4868223.png");
+    position: absolute;
+    width: 350px;
+    height: 50px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    bottom: 35px;
+    left:100px;
+    /* border: 1px solid red; */
+  }
+
+  .upper-footer-cotainer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+  }
+  .middle-list,.right-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  .middle-part h2,.right-part h2{
+    color: rgb(188,26,59);
+  }
+  .left-part .p-plus{
+    width :100px;
+  }
+  .left-part .extra-image1{
+    width:150px;
+  }
+
+  .faq-section {
+   text-align: left;
+   width: 86%;
+   margin: auto;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+    top:250px;
+  }
+
+  .faq-section h3 {
+    font-size: 1.5rem;
+    margin-bottom: 4px;
+  }
+  .faq-section p{
+    font-size:1rem;
+    margin-bottom:20px;
+  }
+
