--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,60 +1,78 @@
 .hero-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 40px 0;
-    background: #f9f9f9;
-  }
-  
-  .herosection-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    width: 100%;
-  }
-  
-  .hero-content {
-    max-width: 50%;
-  }
-  
-  .hero-content h1 {
-    font-size: 3rem;
-    color: #333;
-    margin-bottom: 20px;
-  }
-  
-  .hero-content p {
-    font-size: 1.2rem;
-    color: #555;
-    margin-bottom: 10px;
-  }
-  .hero-content img{
-    width: Hug (372.05px)px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding change */
+  padding: 20px 0;
+  background:antiquewhite;
+}
+
+.herosection-container {
+  display: flex;
+  justify-content: space-between;
+  /* align item change center to top */
+  align-items: top;
+  /* max-width delete and width change*/
+  width: 80%;
+}
+
+.hero-content {
+  max-width: 50%;
+  /* text-align added; */
+  text-align: start;
+}
+
+.hero-content h1 {
+  font-size: 3rem;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.hero-content p {
+  font-size: 1.2rem;
+  color: #555;
+  margin-bottom: 10px;
+}
+.hero-content img{
+  width: Hug (372.05px)px;
 height: Hug (34px)px;
 top: 531px;
 left: 97px;
 gap: 16.62px;
 opacity: 0px;
 
-  }
-  .cta-btn {
-    background-color: #e0b722;
-    color: white;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1.2rem;
-  }
-  
-  .trusted {
-    font-size: 0.9rem;
-    color: #888;
-  }
-  
-  .hero-image {
-    max-width: 40%;
-    height: auto;
-  }
-  
+}
+.cta-btn {
+  background-color: rgb(188,26,59);
+  color: #fff;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  margin: 20px 20px 20px 0;
+}
+
+.trusted {
+  background-color: white;
+  color: black;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.hero-image {
+  max-width: 70%;
+  height: auto;
+  /* fixed the image issue */
+  position: relative;
+  z-index: 1;
+}
+/* background heroien image section */
+#herobackground{
+  background: url("../assests/images/Vector\ \(2\).png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: auto;
+}
