--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -70,7 +70,7 @@ opacity: 0px;
 }
 /* background heroien image section */
 #herobackground{
-  background: url("../assests/images/Vector\ \(2\).png");
+  background: url("../assests/images/heroimage2.png");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
