--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -45,7 +45,7 @@ background: linear-gradient(180deg, rgba(255, 238, 204, 0) 2.59%, rgba(255, 238,
   .banksafelogo{
     /* border: 2px solid red; */
     display: block;
-    background: url("../assests/images/bankimage.jpeg");
+    background: url("../assests/images/banksafe.webp");
     position: absolute;
     width: 300px;
     height: 300px;
